--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 <body>
 
     <div id="page" class="site">
+        <!-- off canvas menu -->
+        <aside class="site-off desktop-hide">
+            <div class="off-canvas">
+                <div class="canvas-head flexitem">
+                    <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                    <div class="t-close flexcenter"><i class="ri-close-line"></i></div>
+                </div>
+                <div class="departments"></div>
+                <nav></nav>
+                <div class="thetop-nav"></div>
+            </div>
+        </aside>
         <!-- header top start -->
         <header>
             <div class="header-top mobile-hide">
@@ -60,9 +72,14 @@
             <div class="header-nav">
                 <div class="container">
                     <div class="wrapper flexitem">
-                        <a href="" class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></a>
+                        <div class="trigger desktop-hide"><span class="i ri-menu-2-line"></span></div>
                         <div class="left flexitem">
-                            <div class="logo"><a href="/"><span class="circle"></span>.Store</a></div>
+                            <div class="logo">
+                                <a href="/">
+                                    <span class="circle"></span>
+                                    .Store
+                                </a>
+                            </div>
                             <nav class="mobile-hide">
                                 <ul class="flexitem second-links">
                                     <li><a href="#">Home</a></li>
@@ -213,6 +230,16 @@
                                                 Beauty
                                                 <div class="icon-small"><i class="ri-arrow-right-s-line"></i></div>
                                             </a>
+                                            <ul>
+                                                <li><a href="#">Makeup</a></li>
+                                                <li><a href="#">Skin Care</a></li>
+                                                <li><a href="#">Hair Care</a></li>
+                                                <li><a href="#">Fragrance</a></li>
+                                                <li><a href="#">Foot & Hand Care</a></li>
+                                                <li><a href="#">Tools & Accessories</a></li>
+                                                <li><a href="#">Shave & Hair Removal</a></li>
+                                                <li><a href="#">Personal Care</a></li>
+                                            </ul>
                                         </li>
                                         <li class="has-child electric">
                                             <a href="#" class="flexitem">
@@ -220,6 +247,17 @@
                                                 Electronic
                                                 <div class="icon-small"><i class="ri-arrow-right-s-line"></i></div>
                                             </a>
+                                            <ul>
+                                                <li><a href="#">Camera</a></li>
+                                                <li><a href="#">Cell Phone</a></li>
+                                                <li><a href="#">Computer</a></li>
+                                                <li><a href="#">GPS & Navigation</a></li>
+                                                <li><a href="#">Headphones</a></li>
+                                                <li><a href="#">Hone Audio</a></li>
+                                                <li><a href="#">Television</a></li>
+                                                <li><a href="#">Video Projectors</a></li>
+                                                <li><a href="#">Wearable Technology</a></li>
+                                            </ul>
                                         </li>
                                         <li class="has-child fashion">
                                             <a href="#" class="flexitem">
@@ -227,6 +265,14 @@
                                                 Women's Fashion
                                                 <div class="icon-small"><i class="ri-arrow-right-s-line"></i></div>
                                             </a>
+                                            <ul>
+                                                <li><a href="#">Clothing</a></li>
+                                                <li><a href="#">Shoes</a></li>
+                                                <li><a href="#">Jewelry</a></li>
+                                                <li><a href="#">Watches</a></li>
+                                                <li><a href="#">Handbags</a></li>
+                                                <li><a href="#">Accessories</a></li>
+                                            </ul>
                                         </li>
                                         <li>
                                             <a href="#" class="flexitem">
@@ -252,12 +298,72 @@
                                                 Health & Household
                                             </a>
                                         </li>
-                                        <li class="has-child electric">
+                                        <li class="has-child homekit">
                                             <a href="#" class="flexitem">
                                                 <div class="icon-large"><i class="ri-home-8-line"></i></div>
                                                 Home & Kitchen
                                                 <div class="icon-small"><i class="ri-arrow-right-s-line"></i></div>
                                             </a>
+                                            <div class="mega">
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Kitchen & Dining</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Kitchen</a></li>
+                                                            <li><a href="#">Dining Room</a></li>
+                                                            <li><a href="#">Pantry</a></li>
+                                                            <li><a href="#">Great Room</a></li>
+                                                            <li><a href="#">Breackfast Nook</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="row">
+                                                        <h4><a href="">Living</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Living Room</a></li>
+                                                            <li><a href="#">Family Room</a></li>
+                                                            <li><a href="#">Sunroom</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Bed & Bath</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Bathroom</a></li>
+                                                            <li><a href="#">Bed Room</a></li>
+                                                            <li><a href="#">Pawder Room</a></li>
+                                                            <li><a href="#">Storage & Closed</a></li>
+                                                            <li><a href="#">Baby & Kids</a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <div class="row">
+                                                        <h4><a href="">Utility</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Loundry</a></li>
+                                                            <li><a href="#">Garage</a></li>
+                                                            <li><a href="#">Mudroom</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="flexcol">
+                                                    <div class="row">
+                                                        <h4><a href="#">Outdoor</a></h4>
+                                                        <ul>
+                                                            <li><a href="#">Landscape</a></li>
+                                                            <li><a href="#">Patio</a></li>
+                                                            <li><a href="#">Deck</a></li>
+                                                            <li><a href="#">Pool</a></li>
+                                                            <li><a href="#">Backyard</a></li>
+                                                            <li><a href="#">Porch</a></li>
+                                                            <li><a href="#">Exterior</a></li>
+                                                            <li><a href="#">Outdoor Kitchen</a></li>
+                                                            <li><a href="#">Front Yard</a></li>
+                                                            <li><a href="#">Driveway</a></li>
+                                                            <li><a href="#">Poolhouse</a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </li>
                                         <li>
                                             <a href="#" class="flexitem">
@@ -297,7 +403,32 @@
         </header>
 
         <!-- main -->
-        <main></main>
+        <main>
+            <div class="slider">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="myslider">
+                            <div class="wrapper">
+                                <div class="slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="./assets/img/slider/slider0.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br>
+                                                <span>Brand New Shoes</span>
+                                            </h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <!-- footer -->
         <footer></footer>
