--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ecommerce website Html css & javascript</title>
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- swiper css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <!-- icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -407,9 +409,9 @@
             <div class="slider">
                 <div class="container">
                     <div class="wrapper">
-                        <div class="myslider">
-                            <div class="wrapper">
-                                <div class="slide">
+                        <div class="myslider swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
                                     <div class="item">
                                         <div class="image object-cover">
                                             <img src="./assets/img/slider/slider0.jpg" alt="">
@@ -423,7 +425,50 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="./assets/img/slider/slider1.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br>
+                                                <span>Brand New Shoes</span>
+                                            </h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="./assets/img/slider/slider2.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br>
+                                                <span>Brand New Shoes</span>
+                                            </h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="item">
+                                        <div class="image object-cover">
+                                            <img src="./assets/img/slider/slider3.jpg" alt="">
+                                        </div>
+                                        <div class="text-content flexcol">
+                                            <h4>Shoes Fashion</h4>
+                                            <h2><span>Come and Get it!</span><br>
+                                                <span>Brand New Shoes</span>
+                                            </h2>
+                                            <a href="#" class="primary-button">Shop Now</a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
+                            <div class="swiper-pagination"></div>
                         </div>
                     </div>
                 </div>
@@ -434,7 +479,8 @@
         <footer></footer>
     </div>
 
-
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- custom javascript -->
     <script src="./assets/js/script.js"></script>
 </body>
