--- a/index.html
+++ b/index.html
@@ -406,6 +406,7 @@
 
         <!-- main -->
         <main>
+            <!-- slider swiper-slide -->
             <div class="slider">
                 <div class="container">
                     <div class="wrapper">
@@ -469,6 +470,44 @@
                                 </div>
                             </div>
                             <div class="swiper-pagination"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Brand section -->
+            <div class="brand">
+                <div class="container">
+                    <div class="wrapper flexitem">
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/asus.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/dng.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/hurley.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/oppo.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/samsung.png" alt="">
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="#">
+                                <img src="./assets/img/brands/zara.png" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
