--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                             </ul>
                                         </div>
                                         <div class="media">
-                                            <div class="image">
+                                            <div class="image object-cover">
                                                 <a href="#">
                                                     <img src="./assets/img/products/apparel4.jpg" alt="">
                                                 </a>
@@ -576,9 +576,10 @@
                                     </div>
                                 </div>
                                 <div class="row products mini">
+                                    <!-- mini item-1 -->
                                     <div class="item">
                                         <div class="media">
-                                            <div class="image">
+                                            <div class="thumbnail object-cover">
                                                 <a href="#">
                                                     <img src="./assets/img/products/shoe1.jpg" alt="">
                                                 </a>
@@ -613,11 +614,126 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- mini item-2 -->
+                                    <div class="item">
+                                        <div class="media">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/apparel1.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Under Armour Men's Tech
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                                <p class="stock-danger">Stock 7 left!</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- mini item-3 -->
+                                    <div class="item">
+                                        <div class="media">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/home1.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Vanenda Velvet Sofa Couch, Mid...
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- mini item-4 -->
+                                    <div class="item">
+                                        <div class="media">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/electronic3.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Wriless Headphones Ov..
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="row products mini">
                                     <div class="item">
-                                        <div class="media">
-                                            <div class="image">
+                                        <div class="media ">
+                                            <div class="thumbnail object-cover">
                                                 <a href="#">
                                                     <img src="./assets/img/products/apparel3.jpg" alt="">
                                                 </a>
@@ -652,9 +768,132 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="item">
+                                        <div class="media ">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/apparel2.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Women's Lightweight Knit
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="media ">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/home2.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Dimmable Ceiling Light Modern
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="media ">
+                                            <div class="thumbnail object-cover">
+                                                <a href="#">
+                                                    <img src="./assets/img/products/home3.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="hoverable">
+                                                <ul>
+                                                    <li class="active"><a href=""><i class="ri-heart-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-eye-line"></i></a></li>
+                                                    <li><a href=""><i class="ri-shuffle-line"></i></a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="discount cricle flexcenter"><span>32%</span></div>
+                                        </div>
+                                        <div class="content">
+                                            <h3 class="main-link">
+                                                <a href="#">
+                                                    Modern Storage Cabinet With Do...
+                                                </a>
+                                            </h3>
+
+                                            <div class="ratings">
+                                                <div class="stars"></div>
+                                                <span class="mini-text">(2,548)</span>
+                                            </div>
+                                            <div class="price">
+                                                <span class="current">$129.99</span>
+                                                <span class="normal mini-text">$189.98</span>
+                                            </div>
+                                            <div class="mini-text">
+                                                <p>2975 Sold</p>
+                                                <p>Free Shipping</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- feature section -->
+            <div class="features">
+                <div class="container">
+                    <div class="wrapper">
+                        <div class="sectop flexitem">
+                            <h2><span class="circle"></span><span>Trending Products</span> </h2>
+                        </div>
+                        <div class="column"></div>
                     </div>
                 </div>
             </div>
